--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Ramen Pizza</a>
+    <ul>
+        <li><a href="recipes/pizza.html">Ramen Pizza</a></li>
+    </ul>
+   
   </body>
 
 </html>
