--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <Meta charset="utf-8" />
+    <Meta charset="utf-8">
     <title>Ramen Pizza</title>  
   </head>
 
   <body>
     <h1>Ramen Pizza</h1>
-    <img src="../img/pizza.jpeg" alt="Picture of cooked Ramen Pizza" />
+    <img src="../img/pizza.jpeg" alt="Picture of cooked Ramen Pizza">
     <h3><em>Looking for some comfort food? Look no further than this pizza with a crunch! </em></h3>
     <p>A popular and recognizable comfort food ... but with the added crunch! The first of our three comfort foods features a mix of saucy, gooey, and cheesy goodness with added texture from Ramen, this dish is sure to hit the spot!</p>
 
