--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <Meta charset="utf-8" />
+    <Meta charset="utf-8">
     <title>Odin Recipes</title>  
   </head>
 
   <body>
     <h1>Odin Recipes</h1>
+
+    <h3>Comfort food version!</h3>
+
+    <img src="https://media.giphy.com/media/3o6Mbiu8HujG6UDDZm/giphy.gif" alt="Homer Simpson drooling">
+
     <ul>
         <li><a href="recipes/pizza.html">Ramen Pizza</a></li>
+        <li><a href="recipes/elvis-sandwich.html">Elvis Sandwich</a></li>
+        <li><a href="recipes/twice-baked-potatoes.html">Twice-Baked Potatoes</a></li>
+
     </ul>
    
   </body>
