Fix metadata syntax. Add homepage return link

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -28,6 +28,7 @@
       <li>Spread half of mozzarella or Jack cheese evenly over noodles, then spread sauce, going all the way to the edge of the pan. Spread remaining mozzarella or jack on top along with half of parmesan. Top pizza as desired, then place in oven. Bake until top is browned and bubbly, about 20 minutes. Sprinkle with remaining parmesan. Allow to cool slightly, then use a thin metal spatula to loosen edges from skillet. Carefully slide pizza out onto cutting board. Slice, and serve immediately.</li>
     </ol>
 
+    <a href="../index.html">Back to Home page</a>
 
   </body>
 
