Create class for h3 heading

--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
   <body>
     <h1>Odin Recipes</h1>
 
-    <h3>Comfort food version!</h3>
+    <h3 class="comfort">Comfort food version!</h3>
 
     <img src="https://media.giphy.com/media/3o6Mbiu8HujG6UDDZm/giphy.gif" alt="Homer Simpson drooling">
 
     <ul>
-        <li><a href="recipes/pizza.html">Ramen Pizza</a></li>
-        <li><a href="recipes/elvis-sandwich.html">Elvis Sandwich</a></li>
-        <li><a href="recipes/twice-baked-potatoes.html">Twice-Baked Potatoes</a></li>
-
+      <li><a href="recipes/pizza.html">Ramen Pizza</a></li>
+      <li><a href="recipes/elvis-sandwich.html">Elvis Sandwich</a></li>
+      <li><a href="recipes/twice-baked-potatoes.html">Twice-Baked Potatoes</a></li>
     </ul>
    
   </body>
