Create class for recipes list. Center in CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <img src="https://media.giphy.com/media/3o6Mbiu8HujG6UDDZm/giphy.gif" alt="Homer Simpson drooling">
 
-    <ul>
+    <ul class="recipes-list">
       <li><a href="recipes/pizza.html">Ramen Pizza</a></li>
       <li><a href="recipes/elvis-sandwich.html">Elvis Sandwich</a></li>
       <li><a href="recipes/twice-baked-potatoes.html">Twice-Baked Potatoes</a></li>
