--- a/recipes/elvis-sandwich.html
+++ b/recipes/elvis-sandwich.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>elvis sandwich</title>
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body>
     <h1>The Elvis Sandwich</h1>
