--- a/recipes/twice-baked-potatoes.html
+++ b/recipes/twice-baked-potatoes.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Twice-Baked Potatoes</title>
+    <link rel="stylesheet" href="../css/styles.css">
   </head>
 
   <body>
